# OpenMediaTrust

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: config.example.yaml
docs/: api.md  architecture.md  deployment.md
examples/: basic_usage.py
scripts/: generate_keys.py  init_db.py
src/: __init__.py
src/api/: __init__.py  main.py
src/api/routers/: admin.py  manifests.py  verification.py  workflow.py
src/core/: __init__.py  assertion_builder.py  manifest_creator.py  metadata_extractor.py  models.py  signer.py
src/enterprise/: __init__.py  access_control.py  compliance.py  workflow.py
src/storage/: __init__.py  database.py  object_store.py
src/verification/: __init__.py  policy_engine.py  validator.py
